Сделал все, кроме формы

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </a>
             <nav class="nav">
                 <ul class="nav-list">
-                    <li class="nav-item"><a href="" class="nav-link">Home</a></li>
+                    <li class="nav-item is-active"><a href="" class="nav-link">Home</a></li>
                     <li class="nav-item"><a href="" class="nav-link">Products</a></li>
                     <li class="nav-item"><a href="" class="nav-link">Our Services</a></li>
                     <li class="nav-item"><a href="" class="nav-link">Pricing</a></li>
@@ -39,10 +39,12 @@
                         nonummy
                         nibh euismod tincidunt ut
                         laoreet dolore.</p>
-                    <a href="" class="button">FREE 30 DAY TRIAL</a>
-                    <div class="button-description">
-                        <span class="ssl-icon"></span>
-                        SSL SECURED CONECTION
+                    <div class="hero-button">
+                        <a href="" class="button big-button">FREE 30 DAY TRIAL</a>
+                        <div class="button-description">
+                            <span class="ssl-icon"></span>
+                            SSL SECURED CONECTION
+                        </div>
                     </div>
                 </div>
             </div>
@@ -135,58 +137,75 @@
         <section class="clients">
             <div class="container">
                 <h2 class="heading">Our Happy Clients</h2>
-                <ul class="clien-list">
-                    <li>
-                        <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel
+                <ul class="clients-list">
+                    <li class="clients-item">
+                        <p class="text clients-text">Duis autem vel eum iriure dolor in hendrerit in vulputate velit
+                            esse molestie consequat, vel
                             illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui
                             blandit odio dignissim qui blandit molestie consequat.</p>
-                        <img src="/img/Place your image here.png" alt="customer">
-                        <strong>Elizabeth Martin</strong>
-                        <span>Customer</span>
+                        <div class="client-info">
+                            <img src="/img/Place your image here.png" alt="customer" class="customer-photo">
+                            <div class="client-info-name">
+                                <strong class="client-name">Elizabeth Martin</strong>
+                                <span class="client-customer">Customer</span>
+                            </div>
+                        </div>
                     </li>
-                    <li>
-                        <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel
+                    <li class="clients-item">
+                        <p class="text clients-text">Duis autem vel eum iriure dolor in hendrerit in vulputate velit
+                            esse molestie consequat, vel
                             illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio.</p>
-                        <img src="/img/Place your image here.png" alt="customer">
-                        <strong>Elizabeth Martin</strong>
-                        <span>Customer</span>
+                        <div class="client-info">
+                            <img src="/img/Place your image here.png" alt="customer" class="customer-photo">
+                            <div class="client-info-name">
+                                <strong class="client-name">Elizabeth Martin</strong>
+                                <span class="client-customer">Customer</span>
+                            </div>
+                        </div>
                     </li>
-                    <li>
-                        <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel
+                    <li class="clients-item">
+                        <p class="text clients-text">Duis autem vel eum iriure dolor in hendrerit in vulputate velit
+                            esse molestie consequat, vel
                             illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio.</p>
-                        <img src="/img/Place your image here.png" alt="Customer">
-                        <strong>John Armstrong</strong>
-                        <span>Customer</span>
+                        <div class="client-info">
+                            <img src="/img/Place your image here.png" alt="Customer" class="customer-photo">
+                            <div class="client-info-name">
+                                <strong class="client-name">John Armstrong</strong>
+                                <span class="client-customer">Customer</span>
+                            </div>
+                        </div>
                     </li>
                 </ul>
             </div>
         </section>
         <section class="contacts">
             <div class="container">
-                <h2 class="heading">
-                </h2>
+                <h2 class="heading">Contacts</h2>
                 <ul class="contact-list">
-                    <li><img src="/img/gps.png" alt="">
-                        <strong>Vizsit Us</strong>
-                        <small>Duis autem vel eum iriure dolor in hendrerit in vulputate velit.
+                    <li class="contact-list-item">
+                        <img src="/img/gps.png" alt="gps" class="contact-img gps">
+                        <strong class="contact-call">Vizsit Us</strong>
+                        <small class="contacts-info">Duis autem vel eum iriure dolor in hendrerit in vulputate velit.
                         </small>
                     </li>
-                    <li><img src="/img/phone.png" alt="">
-                        <strong>Call Us</strong>
-                        <a href="tel:#">+7 (987) 654-32-10</a>
-                        <a href="tel:#">+7 (123) 456-78-90</a>
+                    <li class="contact-list-item">
+                        <img src="/img/phone.png" alt="phone" class="contact-img phone">
+                        <strong class="contact-call">Call Us</strong>
+                        <a href="tel:#" class="contacts-info">+7 (987) 654-32-10</a>
+                        <a href="tel:#" class="contacts-info">+7 (123) 456-78-90</a>
                     </li>
-                    <li><img src="/img/mail.png" alt="">
-                        <strong>Email Us</strong>
-                        <a href="mailto:#">example@example.com</a>
-                        <a href="mailto:#">support@example.com</a>
+                    <li class="contact-list-item">
+                        <img src="/img/mail.png" alt="mail" class="contact-img mail">
+                        <strong class="contact-call">Email Us</strong>
+                        <a href="mailto:#" class="contacts-info">example@example.com</a>
+                        <a href="mailto:#" class="contacts-info">support@example.com</a>
                     </li>
                 </ul>
             </div>
         </section>
     </main>
-    <footer>
-        <div class="container">
+    <footer class="footer">
+        <div class="container footer-container">
             <div class="footer-left">
                 <a href="#" class="logo-footer">
                     <img src="/img/Logo.png" alt="logo" class="logo-img">
@@ -204,15 +223,15 @@
                 </nav>
                 <ul class="footer-social">
                     <li class="footer-social-item"><a href="" class="footer-social-link"><span
-                                class="footer-social-icon"></span></a></li>
+                                class="footer-social-icon twitter"></span></a></li>
                     <li class="footer-social-item"><a href="" class="footer-social-link"><span
-                                class="footer-social-icon"></span></a></li>
+                                class="footer-social-icon linked-in"></span></a></li>
                     <li class="footer-social-item"><a href="" class="footer-social-link"><span
-                                class="footer-social-icon"></span></a></li>
+                                class="footer-social-icon email"></span></a></li>
                 </ul>
             </div>
         </div>
     </footer>
-</body>
+</body> 
 
 </html>
